# wg-web-server

./: .travis.yml  Cargo.toml  README.md
migrations/2018-12-27-203915_create_users/: up.sql
migrations/2019-05-03-062658_create_peers/: down.sql  up.sql
scripts/: find-ideal-rust-nightly.sh
src/: asset.rs  cli.rs  db.rs  lang.rs  launchpad.rs  main.rs  schema.rs
src/config/: conf_file.rs  interface.rs  mod.rs  peer.rs  presharedkey.rs  privatekey.rs  publickey.rs
src/controllers/: auth.rs  index.rs  mod.rs  network.rs  peers.rs  users.rs
src/fairings/: database.rs
src/models/: mod.rs  peer.rs  user.rs
src/net/: conf.rs  interface.rs  mod.rs  peer.rs  privatekey.rs  publickey.rs
src/states/: mod.rs  wgstate.rs
src/utils/: form_option.rs  impl_with_fromstr.rs  mod.rs
static/css/: index.css  main.css  network.css
static/js/: generate-conf.js
templates/: index.html
templates/auth/: login.html
templates/layout/: layout.html
templates/network/: index.html
templates/peers/: add.html
tests/: cli.rs
wireguard-ctrl-rs/: Cargo.toml
wireguard-ctrl-rs/examples/: wg.rs
wireguard-ctrl-rs/src/: lib.rs  netlink.rs  rtnetlink.rs  set.rs
wireguard-ctrl-rs/src/err/: connect_error.rs
wireguard-ctrl-rs/src/socket/: parse.rs  socket.rs
wireguard-ctrl-rs/tests/: set_and_get.rs
wireguard-uapi/: Cargo.toml
wireguard-uapi/examples/: wg.rs
wireguard-uapi/src/: get.rs  lib.rs
wireguard-uapi/src/err/: get_device_error.rs  mod.rs  parse_attribute_error.rs
wireguard-uapi/src/socket/: parse.rs  socket.rs
wireguard-uapi/tests/: set_and_get.rs
