[package]
name = "wg-web-server"
version = "0.1.0"
authors = ["Brandon Cheng"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
clap = "~2.32.0"
diesel_migrations = "1.4.0"
exitfailure = "0.5.1"
failure = "0.1.5"
ipnet = "2.0.0"
rand_os = "0.1.2"
rocket = "0.4.0"
rust-embed = "4.3.0"
x25519-dalek = "0.5.0"

[dependencies.askama]
# As of 2018-12-27, askama 0.7.2 depends on rocket 0.3 instead of 0.4. Using
# askama stable causes dependency conflicts for this reason.
git = "https://github.com/djc/askama"
rev = "39e08325c0e0fba75384579427d1c6f7eca8fbc9"
features = ["with-rocket"]

[build-dependencies.askama]
git = "https://github.com/djc/askama"
rev = "39e08325c0e0fba75384579427d1c6f7eca8fbc9"
features = ["with-rocket"]

[dependencies.diesel]
version = "1.3.3"
features = ["sqlite"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_sqlite_pool"]

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
