[package]
name = "wg-web-server"
version = "0.1.0"
authors = ["Brandon Cheng"]
edition = "2018"

[workspace]

[dependencies]
base64 = "0.10.1"
clap = "~2.32.0"
diesel_migrations = "1.4.0"
exitfailure = "0.5.1"
failure = "0.1.5"
humantime = "1.2.0"
ipnet = "2.0.0"
libc = "0.2.67"
pretty-bytes = "0.2.2"
rand_os = "0.1.2"
rocket = "0.4.2"
rust-argon2 = "0.4.0"
rust-embed = "4.3.0"
wireguard-uapi = "1.0.2"
x25519-dalek = "0.5.0"

[dependencies.askama]
version = "0.8.0"
features = ["with-rocket"]

[dependencies.diesel]
version = "1.4.3"
features = ["sqlite"]

[dependencies.libsqlite3-sys]
version = "0.16.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_sqlite_pool"]

[dev-dependencies]
assert_cmd = "0.12"
mktemp = "0.4.0"
predicates = "1"

[features]
sqlite-bundled = ["libsqlite3-sys/bundled"]
